<resources>
    <string name="app_name">Shoes Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email :</string>
    <string name="hint_email">Enter Your mail</string>
    <string name="pass">Password :</string>
    <string name="hint_pass">Enter your Password</string>
    <string name="signUp_butt">Sign Up</string>
    <string name="signIn_butt">Sign In</string>
    <string name="welcome_text">Welcome :</string>
    <string name="next">Next</string>
    <string name="title_activity_qqqq">qqqq</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add">+</string>
    <string name="scroll_view">Scroll</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="save">Save</string>
    <string name="cancle">Cancle</string>
    <string name="shoe_name">Name:</string>
    <string name="shoe_size">Size :</string>
    <string name="shoe_company">Company :</string>
    <string name="shoe_description">Discription :</string>
    <string name="empty_hint">" "</string>
    <string name="empty_list">empty List !</string>
    <string name="empty_fields_warning"> * Please fill all fields</string>
    <string name="logout">Log out</string>
    <string name="instructions"> Click Next to browse Shoe List to add Shoe click add button </string>
</resources>